--- a/en/FARSelector.html
+++ b/en/FARSelector.html
@@ -74,7 +74,9 @@
 <p>Минимальная поддерживаемая версия FAR 2 build 1007. </p>
 <h3><a name="Installation"></a>Installation<a href="#Installation" class="section_anchor"></a></h3>
 <ol><li>Распакуйте архив в папку с far.exe; </li>
-<li>Замените вызовы far.exe на FarS.exe. </li></ol><h3><a name="How_it_works?"></a>How it works?<a href="#How_it_works?" class="section_anchor"></a></h3>
+<li>Замените вызовы far.exe на FarS.exe. </li></ol>
+
+<h3><a name="How_it_works?"></a>How it works?<a href="#How_it_works?" class="section_anchor"></a></h3>
 <p>При запуске FarS.exe ищет открытые и доступные копии FAR.EXE. Недоступный - значит нет активных панелей (в данный момент выполняется какая-либо консольная команда, активен редактор/вьювер, или диалог...). </p>
 <p>Если доступных копий нет вообще - запускается новый FAR.EXE, или новая вкладка в ConEmu если он найден в той же папке, что и FAR.EXE. </p>
 <p>Если доступные копии есть - дальнейшее поведение зависит от настройки: </p>
