--- a/en/NewConsole.html
+++ b/en/NewConsole.html
@@ -102,7 +102,9 @@ rem Disable processing of the -new_console switch
 set ConEmuHooks=NOARG
 rem And now you are safe to run your command
 git -am &quot;Commit message with -new_console argument&quot;</pre>
-</ul><h1><a name="The_difference"></a>The difference<a href="#The_difference" class="section_anchor"></a></h1>
+</ul>
+
+<h1><a name="The_difference"></a>The difference<a href="#The_difference" class="section_anchor"></a></h1>
 <p>What is the difference between ‘-new_console’ and ‘-cur_console’? </p>
 <p>‘-new_console’ always creates new tab in ConEmu, while ‘-cur_console’ not. </p>
 <p>So, some of switches used with ‘-cur_console’ does not have any effect. </p>
