--- a/en/QSearchSwitch.html
+++ b/en/QSearchSwitch.html
@@ -75,9 +75,13 @@
 <p>If you want to type in Far CommandLine - press Alt+‘letter’. After first symbol (when CommandLine is not empty) you may release Alt. </p>
 <h3><a name="Installation"></a>Installation<a href="#Installation" class="section_anchor"></a></h3>
 <ul><li>Unpack to <tt>%FARHOME%\Plugins\QSearchSwitch</tt> folder </li>
-<li>Restart Far Manager </li></ul><h3><a name="Requirements"></a>Requirements<a href="#Requirements" class="section_anchor"></a></h3>
+<li>Restart Far Manager </li></ul>
+
+<h3><a name="Requirements"></a>Requirements<a href="#Requirements" class="section_anchor"></a></h3>
 <ul><li>Far Manager 3.0 build 2630 bis or higher </li>
-<li>Far3bis required cause of <a href="http://bugs.farmanager.com/view.php?id=1687" rel="nofollow">http://bugs.farmanager.com/view.php?id=1687</a> </li></ul><h3><a name="Configuration"></a>Configuration<a href="#Configuration" class="section_anchor"></a></h3>
+<li>Far3bis required cause of <a href="http://bugs.farmanager.com/view.php?id=1687" rel="nofollow">http://bugs.farmanager.com/view.php?id=1687</a> </li></ul>
+
+<h3><a name="Configuration"></a>Configuration<a href="#Configuration" class="section_anchor"></a></h3>
 <p>Use Plugin.Call(&quot;9d5d070e-42f3-4a10-82e3-b3c74830705b&quot;,Cmd) to control plugin, where Cmd is bitmask </p>
 <pre class="prettyprint">  0x01 - switch (enable/disable)
   0x02 - enable
