--- a/en/SettingsFarView.html
+++ b/en/SettingsFarView.html
@@ -103,8 +103,12 @@
 <p><strong>Restore on Far startup</strong> Restore panel views on Far startup </p>
 <h2><a name="Preview_background"></a>Preview background<a href="#Preview_background" class="section_anchor"></a></h2>
 <p>Maximal zoom for images smaller than preview </p>
-<ul><li><strong>Color index</strong> </li></ul><ul><li><strong>RGB</strong> </li></ul><h2><a name="Preview_frame"></a>Preview frame<a href="#Preview_frame" class="section_anchor"></a></h2>
-<ul><li><strong>Color index</strong> </li></ul><ul><li><strong>RGB</strong> </li></ul><h2><a name="Current_item_frame"></a>Current item frame<a href="#Current_item_frame" class="section_anchor"></a></h2>
+<ul><li><strong>Color index</strong> </li></ul><ul><li><strong>RGB</strong> </li></ul>
+
+<h2><a name="Preview_frame"></a>Preview frame<a href="#Preview_frame" class="section_anchor"></a></h2>
+<ul><li><strong>Color index</strong> </li></ul><ul><li><strong>RGB</strong> </li></ul>
+
+<h2><a name="Current_item_frame"></a>Current item frame<a href="#Current_item_frame" class="section_anchor"></a></h2>
 <ul><li><strong>Color index</strong> </li></ul><ul><li><strong>RGB</strong> </li></ul><p><strong>Apply</strong>  </p>
 <h2><a name="Thumbnails_mode"></a>Thumbnails mode<a href="#Thumbnails_mode" class="section_anchor"></a></h2>
 <h2><a name="Tiles_mode"></a>Tiles mode<a href="#Tiles_mode" class="section_anchor"></a></h2>
