--- a/en/SettingsUpdate.html
+++ b/en/SettingsUpdate.html
@@ -79,14 +79,18 @@
 <p><strong>Show TSA balloon</strong>  </p>
 <ul><li><strong>Stable</strong> </li>
 <li><strong>Preview</strong> </li>
-<li><strong>Latest</strong> </li></ul><h2><a name="Use_proxy"></a>Use proxy<a href="#Use_proxy" class="section_anchor"></a></h2>
+<li><strong>Latest</strong> </li></ul>
+
+<h2><a name="Use_proxy"></a>Use proxy<a href="#Use_proxy" class="section_anchor"></a></h2>
 <p><strong>Server:port</strong>  </p>
 <p><strong>User</strong>  </p>
 <p><strong>Password</strong>  </p>
 <h2><a name="Download_path"></a>Download path<a href="#Download_path" class="section_anchor"></a></h2>
 <p><strong>Leave downloaded packages</strong>  </p>
 <h2><a name="Update_command_(%1_-_package,_%2_-_.exe_folder,_%3_-_x86/x64,_%4"></a>Update command (%1 - package, %2 - <a href="ConEmu.html">ConEmu</a>.exe folder, %3 - x86/x64, %4 - PID)<a href="#Update_command_(%1_-_package,_%2_-_.exe_folder,_%3_-_x86/x64,_%4" class="section_anchor"></a></h2>
-<ul><li><strong>Installer (ConEmuSetup.exe)</strong> </li></ul><ul><li><strong>7-Zip archieve (<a href="ConEmu.html">ConEmu</a>.7z), WinRar or 7-Zip required</strong> </li></ul><h2><a name="Post-update_command,_don&#x27;t_forget_‘call’_for_batches"></a>Post-update command, don&#x27;t forget ‘call’ for batches<a href="#Post-update_command,_don&#x27;t_forget_‘call’_for_batches" class="section_anchor"></a></h2>
+<ul><li><strong>Installer (ConEmuSetup.exe)</strong> </li></ul><ul><li><strong>7-Zip archieve (<a href="ConEmu.html">ConEmu</a>.7z), WinRar or 7-Zip required</strong> </li></ul>
+
+<h2><a name="Post-update_command,_don&#x27;t_forget_‘call’_for_batches"></a>Post-update command, don&#x27;t forget ‘call’ for batches<a href="#Post-update_command,_don&#x27;t_forget_‘call’_for_batches" class="section_anchor"></a></h2>
 <h2><a name="latest_version_location_info"></a><a href="ConEmu.html">ConEmu</a> latest version location info<a href="#latest_version_location_info" class="section_anchor"></a></h2>
 
 <!-- Content ends -->
