--- a/en/TabletPC.html
+++ b/en/TabletPC.html
@@ -83,16 +83,30 @@
 </blockquote></p>
 <h4><a name="Групповое"></a>Групповое<a href="#Групповое" class="section_anchor"></a></h4>
 <ul><li>Держать палец над первым файлом/папкой, пока под пальцем не появится ‘квадрат’. После этого можно вести палец по панели - будут выделены ‘проведенные’ элементы. </li>
-<li>Выделить/снять выделение с первого файла группы (тап двумя пальцами). После этого, на области статуса (для выделения вниз) или области имен колонок (для выделения вверх) двойной тап с удержанием. </li></ul><h3><a name="Прокрутка_панели"></a>Прокрутка панели<a href="#Прокрутка_панели" class="section_anchor"></a></h3>
+<li>Выделить/снять выделение с первого файла группы (тап двумя пальцами). После этого, на области статуса (для выделения вниз) или области имен колонок (для выделения вверх) двойной тап с удержанием. </li></ul>
+
+<h3><a name="Прокрутка_панели"></a>Прокрутка панели<a href="#Прокрутка_панели" class="section_anchor"></a></h3>
 <ul><li>Прокрутка (одновременно двумя пальцами нажать-перетащить вверх/вниз-отпустить). </li>
-<li>Двойной тап с удержанием на заголовке колонки панели или статусной области приводит к прокрутке панели. Внимание! При этом может меняться ‘выделенность’ элементов панели. </li></ul><h3><a name="Ресайз_панелей"></a>Ресайз панелей<a href="#Ресайз_панелей" class="section_anchor"></a></h3>
-<ul><li>Перетащите разделитель между панелями вправо/влево и отпустите. Внимание! На вкладке ‘Far Manager’ должны быть включены флажки ‘Resize panels by mouse’ и ‘use both panel edges’. </li></ul><h3><a name="Скрытие/показ_панелей"></a>Скрытие/показ панелей<a href="#Скрытие/показ_панелей" class="section_anchor"></a></h3>
-<ul><li>Тап по области часов +1 строка вниз (правый верхний угол). Аналог левому клику мышкой в координате {0,0}. </li></ul><h3><a name="Вызов_контекстного_меню_в_панелях_-"></a>Вызов контекстного меню в панелях - EMenu<a href="#Вызов_контекстного_меню_в_панелях_-" class="section_anchor"></a></h3>
+<li>Двойной тап с удержанием на заголовке колонки панели или статусной области приводит к прокрутке панели. Внимание! При этом может меняться ‘выделенность’ элементов панели. </li></ul>
+
+<h3><a name="Ресайз_панелей"></a>Ресайз панелей<a href="#Ресайз_панелей" class="section_anchor"></a></h3>
+<ul><li>Перетащите разделитель между панелями вправо/влево и отпустите. Внимание! На вкладке ‘Far Manager’ должны быть включены флажки ‘Resize panels by mouse’ и ‘use both panel edges’. </li></ul>
+
+<h3><a name="Скрытие/показ_панелей"></a>Скрытие/показ панелей<a href="#Скрытие/показ_панелей" class="section_anchor"></a></h3>
+<ul><li>Тап по области часов +1 строка вниз (правый верхний угол). Аналог левому клику мышкой в координате {0,0}. </li></ul>
+
+<h3><a name="Вызов_контекстного_меню_в_панелях_-"></a>Вызов контекстного меню в панелях - EMenu<a href="#Вызов_контекстного_меню_в_панелях_-" class="section_anchor"></a></h3>
 <p>!!! проверить параметры настройки <ul><li>Длинный тап. Должна быть включена настройка </li></ul></p>
 <h3><a name="Прокрутка_вьювера"></a>Прокрутка вьювера<a href="#Прокрутка_вьювера" class="section_anchor"></a></h3>
-<ul><li>Двойной тап по верхней/нижней части вьювера приводит к прокрутке содержимого вверх/вниз. </li></ul><h3><a name="Переключение_табов"></a>Переключение табов<a href="#Переключение_табов" class="section_anchor"></a></h3>
-<ul><li>Жест &quot;Поворот&quot; листает табы влево/вправо. </li></ul><h3><a name="Изменение_шрифта"></a>Изменение шрифта<a href="#Изменение_шрифта" class="section_anchor"></a></h3>
-<ul><li>Жест &quot;Масштаб&quot; увеличивает/уменьшает размер шрифта. </li></ul><h3><a name="Редактор"></a>Редактор<a href="#Редактор" class="section_anchor"></a></h3>
+<ul><li>Двойной тап по верхней/нижней части вьювера приводит к прокрутке содержимого вверх/вниз. </li></ul>
+
+<h3><a name="Переключение_табов"></a>Переключение табов<a href="#Переключение_табов" class="section_anchor"></a></h3>
+<ul><li>Жест &quot;Поворот&quot; листает табы влево/вправо. </li></ul>
+
+<h3><a name="Изменение_шрифта"></a>Изменение шрифта<a href="#Изменение_шрифта" class="section_anchor"></a></h3>
+<ul><li>Жест &quot;Масштаб&quot; увеличивает/уменьшает размер шрифта. </li></ul>
+
+<h3><a name="Редактор"></a>Редактор<a href="#Редактор" class="section_anchor"></a></h3>
 <p>Удобно использовать макрос Editor.MsRClick.fml для копирования и вставки из буфера. Длинный тап по редактору или полю редактирования в диалоге приводит к отображению меню </p>
 <pre class="prettyprint">------------------------¬
 ¦  Copy whole line      ¦
