--- a/en/AnsiEscapeCodes.html
+++ b/en/AnsiEscapeCodes.html
@@ -82,10 +82,14 @@
 <p>New option ‘ANSI X3.64 / xterm 256 colors’ on the ‘Features’ page, turned On by default. It works with full console (including scrolling area - BufferHeight) but xterm 256 color affects only on ‘working’ area (this is bottom part of console, if scrolling exists). Outside (upper area) 256 colors will be approximated to console stanard 16-colors. </p>
 <h2><a name="ANSI_sequences_processing_requirements"></a>ANSI sequences processing requirements<a href="#ANSI_sequences_processing_requirements" class="section_anchor"></a></h2>
 <ul><li>These checkboxes must be <strong>On</strong> </li><ul><li>‘ANSI X3.64 / xterm 256 colors’ on the <a href="Settings.html#Features">Features</a> page </li>
-<li>‘Inject ConEmuHk’ on the <a href="Settings.html#Features">Features</a> page (required for 2-nd level programs, aka started from your shell) </li></ul></ul><h2><a name="xterm_256_color_processing_requirements"></a>xterm 256 color processing requirements<a href="#xterm_256_color_processing_requirements" class="section_anchor"></a></h2>
+<li>‘Inject ConEmuHk’ on the <a href="Settings.html#Features">Features</a> page (required for 2-nd level programs, aka started from your shell) </li></ul></ul>
+
+<h2><a name="xterm_256_color_processing_requirements"></a>xterm 256 color processing requirements<a href="#xterm_256_color_processing_requirements" class="section_anchor"></a></h2>
 <ul><li>These checkboxes must be <strong>On</strong> </li><ul><li>‘TrueMod (24bit color) support’ on the <a href="Settings.html#Colors">Colors</a> page </li>
 <li>‘ANSI X3.64 / xterm 256 colors’ on the <a href="Settings.html#Features">Features</a> page </li>
-<li>‘Inject ConEmuHk’ on the <a href="Settings.html#Features">Features</a> page (required for 2-nd level programs, aka started from your shell) </li></ul><li>You need to ensure that buffer/scrolling is Off </li></ul><h3><a name="Example_1:_Vim"></a>Example 1: Vim<a href="#Example_1:_Vim" class="section_anchor"></a></h3>
+<li>‘Inject ConEmuHk’ on the <a href="Settings.html#Features">Features</a> page (required for 2-nd level programs, aka started from your shell) </li></ul><li>You need to ensure that buffer/scrolling is Off </li></ul>
+
+<h3><a name="Example_1:_Vim"></a>Example 1: Vim<a href="#Example_1:_Vim" class="section_anchor"></a></h3>
 <pre class="prettyprint">vim.exe -cur_console:h0 &lt;Vim arguments here&gt;</pre>
 <h3><a name="Example_2:_256colors2.pl"></a>Example 2: 256colors2.pl<a href="#Example_2:_256colors2.pl" class="section_anchor"></a></h3>
 <p>Perl script <a href="http://www.frexx.de/xterm-256-notes/data/256colors2.pl" rel="nofollow">256colors2.pl</a> need to be runned as following: </p>
