--- a/en/SettingsComspec.html
+++ b/en/SettingsComspec.html
@@ -77,7 +77,9 @@
 <ul><li><strong>Auto (tcc - if installed, %ComSpec% - otherwise)</strong> Start tcc - if installed, %ComSpec% - otherwise (used for ‘Create new ‘cmd.exe’ console’) </li>
 <li><strong>%ComSpec% (env.var.)</strong> Use %ComSpec% environment variable (used for ‘Create new ‘cmd.exe’ console’) </li>
 <li><strong>cmd</strong> Use cmd.exe only (used for ‘Create new ‘cmd.exe’ console’) </li>
-<li><strong>Explicit executable (env.var. of <a href="ConEmu.html">ConEmu</a>.exe allowed)</strong> Specified command processor (used for ‘Create new ‘cmd.exe’ console’) </li></ul><h2><a name="Choose_preferred_command_processor_platform_(bits)"></a>Choose preferred command processor platform (bits)<a href="#Choose_preferred_command_processor_platform_(bits)" class="section_anchor"></a></h2>
+<li><strong>Explicit executable (env.var. of <a href="ConEmu.html">ConEmu</a>.exe allowed)</strong> Specified command processor (used for ‘Create new ‘cmd.exe’ console’) </li></ul>
+
+<h2><a name="Choose_preferred_command_processor_platform_(bits)"></a>Choose preferred command processor platform (bits)<a href="#Choose_preferred_command_processor_platform_(bits)" class="section_anchor"></a></h2>
 <ul><li><strong>Same as OS</strong> 64bit OS only, (System32 or SysWOW64) - use System32 </li>
 <li><strong>Same as running application</strong> 64bit OS only, (System32 or SysWOW64) - same bits as application (<a href="ConEmu.html">ConEmu</a>, Far Manager, ...) </li>
 <li><strong>x32 always</strong> 64bit OS only, (System32 or SysWOW64) - use SysWOW64 </li></ul><p><strong>Test</strong> Show ‘calculated’ ComSpec path </p>
