--- a/en/ShellWorkDir.html
+++ b/en/ShellWorkDir.html
@@ -83,7 +83,9 @@
 <li>Ability to inform ConEmu GUI about shell <strong>CD</strong> using <a href="AnsiEscapeCodes.html">ANSI</a> or <a href="ConEmuC.html">ConEmuC</a>; </li>
 <li>Display <strong>CD</strong> in the tab title using <a href="SettingsTabBar.html">tab templates</a>; </li>
 <li>Reuse <strong>CD</strong> in the <a href="RestartTab.html">Restart</a> and <a href="LaunchNewTab.html">Create new console</a> dialogs; </li>
-<li>At last you may use &quot;<strong>%CD%</strong>&quot; variable with <a href="GuiMacro.html#List_of_functions">Shell</a> macro function in the <tt>Dir</tt> parameter. </li></ul><h1><a name="What_you_shall_do_to_get_CD_support"></a>What you shall do to get <strong>CD</strong> support<a href="#What_you_shall_do_to_get_CD_support" class="section_anchor"></a></h1>
+<li>At last you may use &quot;<strong>%CD%</strong>&quot; variable with <a href="GuiMacro.html#List_of_functions">Shell</a> macro function in the <tt>Dir</tt> parameter. </li></ul>
+
+<h1><a name="What_you_shall_do_to_get_CD_support"></a>What you shall do to get <strong>CD</strong> support<a href="#What_you_shall_do_to_get_CD_support" class="section_anchor"></a></h1>
 <h2><a name="cmd_and_tcc"></a>cmd and tcc<a href="#cmd_and_tcc" class="section_anchor"></a></h2>
 <p>Just enable ‘<a href="ConEmuHk.html">Inject ConEmuHk</a>’ feature. ConEmu will maintain <strong>CD</strong> for you automatically. </p>
 <h2><a name="bash_and_other_cygwin_shells"></a>bash and other cygwin shells<a href="#bash_and_other_cygwin_shells" class="section_anchor"></a></h2>
