--- a/ru/Acknowledgement.html
+++ b/ru/Acknowledgement.html
@@ -78,11 +78,15 @@
 <ul><li><a href="https://code.google.com/p/conemu-maximus5/" rel="nofollow">https://code.google.com/p/conemu-maximus5/</a> </li>
 <li><a href="https://github.com/Maximus5/ConEmu" rel="nofollow">https://github.com/Maximus5/ConEmu</a> </li>
 <li><a href="https://sourceforge.net/projects/conemu/" rel="nofollow">https://sourceforge.net/projects/conemu/</a> </li>
-<li><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow">http://www.fosshub.com/ConEmu.html</a> </li></ul><h1><a name="Acknoledgements"></a>Acknoledgements<a href="#Acknoledgements" class="section_anchor"></a></h1>
+<li><a href="http://www.fosshub.com/ConEmu.html" rel="nofollow">http://www.fosshub.com/ConEmu.html</a> </li></ul>
+
+<h1><a name="Acknoledgements"></a>Acknoledgements<a href="#Acknoledgements" class="section_anchor"></a></h1>
 <ul><li><a href="http://www.hanselman.com/tools" rel="nofollow">Hanselman Ultimate Tools List</a> </li>
 <li><a href="http://www.hanselman.com/blog/ConEmuTheWindowsTerminalConsolePromptWeveBeenWaitingFor.aspx" rel="nofollow">ConEmu - The Windows Terminal/Console/Prompt we&#x27;ve been waiting for?</a> </li>
 <li><a href="http://technet.microsoft.com/en-us/magazine/jj649372.aspx#ctl00_MTContentSelector1_mainContentContainer_ctl02" rel="nofollow">TechNet Magazine - Toolbox: New Products for IT Professionals</a> </li>
-<li><a href="http://en.wikipedia.org/wiki/ConEmu" rel="nofollow">ConEmu on wikipedia</a> </li></ul><h1><a name="About_author"></a>About author<a href="#About_author" class="section_anchor"></a></h1>
+<li><a href="http://en.wikipedia.org/wiki/ConEmu" rel="nofollow">ConEmu on wikipedia</a> </li></ul>
+
+<h1><a name="About_author"></a>About author<a href="#About_author" class="section_anchor"></a></h1>
 <p>My accounts on the network. </p>
 <ul><li><a href="https://github.com/Maximus5" rel="nofollow">https://github.com/Maximus5</a> </li>
 <li><a href="http://stackexchange.com/users/1500841/maximus" rel="nofollow"><img src="http://stackexchange.com/users/flair/1500841.png" width="208" height="58" alt="profile for Maximus on Stack Exchange, a network of free, community-driven Q&amp;amp;A sites" title="profile for Maximus on Stack Exchange, a network of free, community-driven Q&amp;amp;A sites"></img></a> </li>
