--- a/ru/AnsiEscapeCodes.html
+++ b/ru/AnsiEscapeCodes.html
@@ -82,10 +82,14 @@
 <p>Новая опция «ANSI X3.64 / xterm 256 colors» на вкладке «Features», по умолчанию включена. Адресуется консоль целиком (с прокруткой), но xterm 256 color влияет только на «рабочую» область (нижняя часть консоли, если есть прокрутка). Вне «рабочей» области 256 цветов аппроксимируются к стандартным 16-и консольным цветам. </p>
 <h2><a name="Для_обработки_ANSI_последовательнос?"></a>Для обработки ANSI последовательностей<a href="#Для_обработки_ANSI_последовательнос?" class="section_anchor"></a></h2>
 <ul><li>Должны быть включены флажки </li><ul><li>«ANSI X3.64 / xterm 256 colors» на вкладке <a href="Settings.html#Features">Features</a> </li>
-<li>«Inject ConEmuHk» на вкладке <a href="Settings.html#Features">Features</a> (требуется для обработки программ второго уровня) </li></ul></ul><h2><a name="Для_режима_xterm_256_color"></a>Для режима xterm 256 color<a href="#Для_режима_xterm_256_color" class="section_anchor"></a></h2>
+<li>«Inject ConEmuHk» на вкладке <a href="Settings.html#Features">Features</a> (требуется для обработки программ второго уровня) </li></ul></ul>
+
+<h2><a name="Для_режима_xterm_256_color"></a>Для режима xterm 256 color<a href="#Для_режима_xterm_256_color" class="section_anchor"></a></h2>
 <ul><li>Должны быть включены флажки </li><ul><li>«TrueMod (24bit color) support» на вкладке <a href="Settings.html#Colors">Colors</a> </li>
 <li>«ANSI X3.64 / xterm 256 colors» на вкладке <a href="Settings.html#Features">Features</a> </li>
-<li>«Inject ConEmuHk» на вкладке <a href="Settings.html#Features">Features</a> (требуется для обработки программ второго уровня) </li></ul><li>проверить выключен ли буфер/прокрутка.  </li></ul><h3><a name="Пример_1:_Vim"></a>Пример 1: Vim<a href="#Пример_1:_Vim" class="section_anchor"></a></h3>
+<li>«Inject ConEmuHk» на вкладке <a href="Settings.html#Features">Features</a> (требуется для обработки программ второго уровня) </li></ul><li>проверить выключен ли буфер/прокрутка.  </li></ul>
+
+<h3><a name="Пример_1:_Vim"></a>Пример 1: Vim<a href="#Пример_1:_Vim" class="section_anchor"></a></h3>
 <pre class="prettyprint">vim.exe -cur_console:h0 &lt;Vim arguments here&gt;</pre>
 <h3><a name="Пример_2:_256colors2.pl"></a>Пример 2: 256colors2.pl<a href="#Пример_2:_256colors2.pl" class="section_anchor"></a></h3>
 <p>Скрипт <a href="http://www.frexx.de/xterm-256-notes/data/256colors2.pl" rel="nofollow">256colors2.pl</a> нужно запускать так: </p>
