--- a/ru/ConEmuHk.html
+++ b/ru/ConEmuHk.html
@@ -80,7 +80,9 @@
 <ul><li><a href="MicrosoftBugs.html">MicrosoftBugs</a>. Windows kernel has several bugs leading to crashes, hungs and black screens. Microsoft fix bugs in next windows versions only. Great, user needs to buy new Windows... Workaround? Injects only. </li>
 <li>Third party tools run injects too. Several injection systems will conflict each other. The result? Crash! One system tries to execute LoadLibrary in the external process, but it think that LoadLibrary is located in the other module than kernel32.dll. Sadly. </li><ul><li>MacType and sort of. There is workaround - add ConEmuC.exe and ConEmuC64.exe to MacType exclusion list. You may still use it with ConEmu.exe and ConEmu64.exe. </li>
 <li>AnsiCon. Another ANSI sequences processor. <a href="ConEmu.html">ConEmu</a> already implements that feature internally. </li>
-<li>Intel pin. You may use it with wrapper batch file, disabling ConEmuHk temporarily. Read about <a href="ConEmuEnvironment.html">ConEmuHooks environment variable</a>. </li></ul><li>ConEmu bugs. Hmm, show me completely bugless software? Report the problem and it will be fixed, I hope. </li></ul><h2><a name="Conclusion"></a>Conclusion<a href="#Conclusion" class="section_anchor"></a></h2>
+<li>Intel pin. You may use it with wrapper batch file, disabling ConEmuHk temporarily. Read about <a href="ConEmuEnvironment.html">ConEmuHooks environment variable</a>. </li></ul><li>ConEmu bugs. Hmm, show me completely bugless software? Report the problem and it will be fixed, I hope. </li></ul>
+
+<h2><a name="Conclusion"></a>Conclusion<a href="#Conclusion" class="section_anchor"></a></h2>
 <p>Do you think still you have no need in ConEmuHk? Well, you may <strong>completely</strong> disable them, but <strong>don&#x27;t complain</strong> of arisen problems which are absent when injects are enabled. </p>
 <ul><li>Uncheck ‘Inject ConEmuHk’ </li>
 <li>Physically delete files ConEmuHk.dll and ConEmuHk64.dll. </li></ul><p>At last, I have some plans about rewritting hooks code using different technique. But it will take time and I can&#x27;t predict what speed improvement can be achieved. </p>
