--- a/ru/Downloads.html
+++ b/ru/Downloads.html
@@ -78,10 +78,14 @@
 <li><a href="https://conemu.codeplex.com/releases" rel="nofollow">CodePlex.com</a> </li></ul><p><!--   * [http://code.google.com/p/conemu-maximus5/downloads/list Googlecode.com] - will be [http://google-opensource.blogspot.se/2013/05/a-change-to-google-code-download-service.html broken soon] --> </p>
 <h3><a name="Third-pary_mirrors"></a>Third-pary mirrors<a href="#Third-pary_mirrors" class="section_anchor"></a></h3>
 <ul><li><a href="http://www.instalki.pl/programy/download/Windows/emulatory/ConEmu.html" rel="nofollow">Instalki.pl</a> </li>
-<li><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a> </li></ul><h2><a name="Release_archives"></a>Release archives<a href="#Release_archives" class="section_anchor"></a></h2>
+<li><a href="http://www.softpedia.com/get/System/System-Miscellaneous/ConEmu.shtml" rel="nofollow">Softpedia.com</a> </li></ul>
+
+<h2><a name="Release_archives"></a>Release archives<a href="#Release_archives" class="section_anchor"></a></h2>
 <p>Searching for some old (exact) <a href="ConEmu.html">ConEmu</a> build? All builds are available here: </p>
 <ul><li><a href="http://sourceforge.net/projects/conemu/files/OldReleases/ConEmuPack/" rel="nofollow">Release archives (sourceforge)</a> </li>
-<li><a href="http://www.oldfoss.com/ConEmu.html" rel="nofollow">Release archives (oldfoss)</a> </li></ul><h2><a name="Far_Manager_related"></a>Far Manager related<a href="#Far_Manager_related" class="section_anchor"></a></h2>
+<li><a href="http://www.oldfoss.com/ConEmu.html" rel="nofollow">Release archives (oldfoss)</a> </li></ul>
+
+<h2><a name="Far_Manager_related"></a>Far Manager related<a href="#Far_Manager_related" class="section_anchor"></a></h2>
 <p>New plugins adopted to newest Far 3.0 are located now on GitHub </p>
 <ul><li><a href="https://github.com/Maximus5/FarPlugins/releases" rel="nofollow">New plugins for Far 3.0</a> </li></ul><p>Far3bis sources and binaries </p>
 <ul><li><a href="https://github.com/Maximus5/Far3bis" rel="nofollow">Far3bis on GitHub</a> </li>
