--- a/ru/LaunchNewTab.html
+++ b/ru/LaunchNewTab.html
@@ -83,7 +83,9 @@
 <h2><a name=""></a><a href="ConEmuArgs.html">Using ConEmu switches</a></h2>
 <p>When you run something from <tt>Win+R</tt> or shortcut from your Desktop, you may use <tt>-cmd</tt> or <tt>-cmdlist</tt> to run your application. Remember, <tt>-cmd</tt> or <tt>-cmdlist</tt> will be the last <a href="ConEmu.html">ConEmu</a>&#x27;s GUI interpreted switch. The rest of command line will be used to start your application. Read more in the <a href="ConEmuArgs.html">wiki</a>. Example: </p>
 <blockquote><a href="ConEmu.html">ConEmu</a> -reuse -dir &quot;c:\projects&quot; -cmd &quot;set PATH=C:\MinGW\bin;%PATH%&quot; &amp; chcp 65001 &amp; sh -l -i 
-</blockquote><h2><a name="Create_new_console_dialog"></a>Create new console dialog<a href="#Create_new_console_dialog" class="section_anchor"></a></h2>
+</blockquote>
+
+<h2><a name="Create_new_console_dialog"></a>Create new console dialog<a href="#Create_new_console_dialog" class="section_anchor"></a></h2>
 <p>How to start application (tcc, powershell, far, putty) in ConEmu tab? </p>
 <p><img src="../img/ConEmuCreate.png" title="ConEmu confirmation of new console creation" alt="ConEmu new console"> </p>
 <p>This dialog may be opened from: <ul><li>Keyboard (Win+W by default), or </li>
