--- a/ru/RegEditor.html
+++ b/ru/RegEditor.html
@@ -70,7 +70,9 @@
 <p><a href="http://plugring.farmanager.com/plugin.php?pid=792" rel="nofollow">Download (Far1/Far2/Far3 x86/x64)</a> </p>
 <h3 id="h0"><a name="About"></a>About<a href="#About" class="section_anchor"></a></h3>
 <blockquote>This Far Manager plugin allows to browse and edit Windows Registry. 
-</blockquote><h3><a name="Features"></a>Features<a href="#Features" class="section_anchor"></a></h3>
+</blockquote>
+
+<h3><a name="Features"></a>Features<a href="#Features" class="section_anchor"></a></h3>
 <ul><li>x86/x64/Far1/Far2 </li>
 <li>Fast (optimized &amp; cached), rescan registry only when changes occures. </li>
 <li>Works with real x64 registry from FAR x86 (x64/x86 view switching supported). </li>
