--- a/ru/SettingsIntegration.html
+++ b/ru/SettingsIntegration.html
@@ -73,7 +73,9 @@
 <p>Note! Your items are registered in Windows registry, they can&#x27;t be ‘portable’. </p>
 <p>ConEmu offers two types of integration, registered separately: </p>
 <ul><li>‘ConEmu Here’ (upper group) - classic mode, your shell will be started in normal ConEmu window; </li>
-<li>‘ConEmu Inside’ (lower group) - your shell will be started in the pane of your Explorer window. </li></ul><h2><a name="ConEmu_Inside"></a>ConEmu Inside<a href="#ConEmu_Inside" class="section_anchor"></a></h2>
+<li>‘ConEmu Inside’ (lower group) - your shell will be started in the pane of your Explorer window. </li></ul>
+
+<h2><a name="ConEmu_Inside"></a>ConEmu Inside<a href="#ConEmu_Inside" class="section_anchor"></a></h2>
 <p>When you run one of ‘ConEmu inside’ items, ConEmu window will be started <strong>inside</strong> your Explorer window. </p>
 <p><img src="../img/ConEmuInside.png" title="ConEmu inside Windows Explorer pane"> </p>
 <p>But it is yours responsibility (on most of OS versions) to provide some free space in your Explorer. For example, turn on ‘View page’ or ‘Details pane’ in Win8&#x27;s before calling one of ConEmu Inside items. </p>
