--- a/ru/TaskBarBug.html
+++ b/ru/TaskBarBug.html
@@ -70,7 +70,9 @@
 <p>Windows 7 and higher allows to pin application icons to the taskbar. You can pin ConEmu icon too, just run it, right-click taskbar icon and choose ‘Pin to taskbar’. </p>
 <p>Right-clicking on that icon may pop up list of registered tasks. If you want to use that handy way to start tasks, do the following: </p>
 <ul><li>goto ‘Tasks’ page of the Settings dialog and set up your favorites; </li>
-<li>goto ‘Task bar’ page, check ‘Add ConEmu tasks to taskbar’ and press ‘Update Now!’ button. </li></ul><h2 id="h0"><a name="Failed_to_reuse"></a>Failed to reuse<a href="#Failed_to_reuse" class="section_anchor"></a></h2>
+<li>goto ‘Task bar’ page, check ‘Add ConEmu tasks to taskbar’ and press ‘Update Now!’ button. </li></ul>
+
+<h2 id="h0"><a name="Failed_to_reuse"></a>Failed to reuse<a href="#Failed_to_reuse" class="section_anchor"></a></h2>
 <p>Sometimes Windows explorer fails to reuse pinned icon. ConEmu can&#x27;t do anything with that, absolutely. This is internal feature of Microsoft, any application can&#x27;t tell to taskbar to ‘reuse’ icon, taskbar decides ‘to do or not to do’ itself. </p>
 <p>Usual reasons for failing icon reuse are: </p>
 <ul><li>User pin different executable than actually running. For example, pinned application is ‘...\KiTTYPortable.exe’, but actually running is ‘...\App\KiTTY\kitty_portable.exe’. That is not a ConEmu issue usually, user can (and must) pin ‘ConEmu.exe’ itself. </li>
