--- a/ru/Tasks.html
+++ b/ru/Tasks.html
@@ -78,7 +78,9 @@
 <ul><li>The shell name. For example: cmd, powershell, bash and so on. </li>
 <li>The shell arguments. For example: `&quot;/k vcvarsall.bat x86&quot; </li>
 <li>Shell working directory. That may be very significant. </li>
-<li>In some cases you need to know environment variables. </li></ul><h3><a name="Where_you_may_get_this_information?"></a>Where you may get this information?<a href="#Where_you_may_get_this_information?" class="section_anchor"></a></h3>
+<li>In some cases you need to know environment variables. </li></ul>
+
+<h3><a name="Where_you_may_get_this_information?"></a>Where you may get this information?<a href="#Where_you_may_get_this_information?" class="section_anchor"></a></h3>
 <p>In most cases you may open properties of shortcut created by any installer. Just find the shortcut, right-click it, and choose ‘Properties’. </p>
 <p><img src="../img/ConEmuVsTask1.png" title="Searching for VS tools prompt command" alt="VS tools prompt"> </p>
 <ul><li>Copy ‘Target’ contents to the ‘Task Commands’; </li>
