--- a/ru/Xterm256Colors.html
+++ b/ru/Xterm256Colors.html
@@ -75,7 +75,9 @@
 <h2><a name="xterm_256_color_mode_requirements"></a>xterm 256 color mode requirements<a href="#xterm_256_color_mode_requirements" class="section_anchor"></a></h2>
 <ul><li>Options must be turned on </li><ul><li>‘TrueMod (24bit color) support’ on <a href="Settings.html#Colors">Colors</a> page </li>
 <li>‘ANSI X3.64 / xterm 256 colors’ on <a href="Settings.html#Features">Features</a> page </li>
-<li>‘Inject ConEmuHk’ on <a href="Settings.html#Features">Features</a> page (required for second level programs) </li></ul><li>Turn off scrolling (extended attributes works only in the ‘work’ area - the bottom of the console) </li></ul><h3><a name="Example_1:_Vim"></a>Example 1: Vim<a href="#Example_1:_Vim" class="section_anchor"></a></h3>
+<li>‘Inject ConEmuHk’ on <a href="Settings.html#Features">Features</a> page (required for second level programs) </li></ul><li>Turn off scrolling (extended attributes works only in the ‘work’ area - the bottom of the console) </li></ul>
+
+<h3><a name="Example_1:_Vim"></a>Example 1: Vim<a href="#Example_1:_Vim" class="section_anchor"></a></h3>
 <pre class="prettyprint">vim.exe -cur_console:h0 &lt;Vim arguments here&gt;</pre>
 <h3><a name="Example_2:_256colors2.pl"></a>Example 2: 256colors2.pl<a href="#Example_2:_256colors2.pl" class="section_anchor"></a></h3>
 <p>Script <a href="http://www.frexx.de/xterm-256-notes/data/256colors2.pl" rel="nofollow">256colors2.pl</a> must be executed as: </p>
