Break html tables by <tr>

--- a/en/FarMacro.html
+++ b/en/FarMacro.html
@@ -14,7 +14,15 @@ layout: docs_en
 <li>Plugin.Call(&quot;4b675d80-1d4a-4ea9-8436-fdc23f2fc14b&quot;,<i>PluginCommand</i>) </li></ul>
 
 <h4><a name="Where_PluginCommand_may_be"></a>Where PluginCommand may be<a href="#Where_PluginCommand_may_be" class="section_anchor"></a></h4>
-<p><table class="wikitable"><tr><td style="border: 1px solid #ccc; padding: 5px;"> 1 </td><td style="border: 1px solid #ccc; padding: 5px;"> Edit console output </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> 2 </td><td style="border: 1px solid #ccc; padding: 5px;"> View console output </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> 3 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch tab visibility </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> 4 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch next tab </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> 5 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch previous tab </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> 6 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch tab commit </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> 7 </td><td style="border: 1px solid #ccc; padding: 5px;"> Attach to ConEmu </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> 8 </td><td style="border: 1px solid #ccc; padding: 5px;"> Start ConEmu debug </td></tr> </table></p>
+<p><table class="wikitable">
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 1 </td><td style="border: 1px solid #ccc; padding: 5px;"> Edit console output </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 2 </td><td style="border: 1px solid #ccc; padding: 5px;"> View console output </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 3 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch tab visibility </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 4 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch next tab </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 5 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch previous tab </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 6 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch tab commit </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 7 </td><td style="border: 1px solid #ccc; padding: 5px;"> Attach to ConEmu </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 8 </td><td style="border: 1px solid #ccc; padding: 5px;"> Start ConEmu debug </td></tr> </table></p>
 <h3><a name="ConEmu_Panel_Views_plugin_macros"></a>ConEmu Panel Views plugin macros<a href="#ConEmu_Panel_Views_plugin_macros" class="section_anchor"></a></h3>
 <h4><a name="Far2"></a>Far2<a href="#Far2" class="section_anchor"></a></h4>
 <ul><li>callplugin(0x43455568,<i>PluginCommand</i>) </li></ul>
@@ -23,6 +31,8 @@ layout: docs_en
 <ul><li>Plugin.Call(&quot;bd454d48-448e-46cc-909d-b6cf789c2d65&quot;,<i>PluginCommand</i>) </li></ul>
 
 <h4><a name="Where_PluginCommand_may_be"></a>Where PluginCommand may be<a href="#Where_PluginCommand_may_be" class="section_anchor"></a></h4>
-<p><table class="wikitable"><tr><td style="border: 1px solid #ccc; padding: 5px;"> 1 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch Thumbnail view on active panel </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> 2 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch Tiles view on active panel </td></tr> </table></p>
+<p><table class="wikitable">
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 1 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch Thumbnail view on active panel </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> 2 </td><td style="border: 1px solid #ccc; padding: 5px;"> Switch Tiles view on active panel </td></tr> </table></p>
 
 <!-- Content ends -->
