--- a/ru/MicrosoftBugs.html
+++ b/ru/MicrosoftBugs.html
@@ -6,7 +6,9 @@ layout: docs_ru
 
 <h1 id="h0"><a name="Exception_in_ReadConsoleOutput"></a>Exception in ReadConsoleOutput<a href="#Exception_in_ReadConsoleOutput" class="section_anchor"></a></h1>
 <p><a href="http://social.msdn.microsoft.com/Forums/en-US/40c8e395-cca9-45c8-b9b8-2fbe6782ac2b" rel="nofollow">http://social.msdn.microsoft.com/Forums/en-US/40c8e395-cca9-45c8-b9b8-2fbe6782ac2b</a> </p>
-<p><table class="wikitable"><tr><td style="border: 1px solid #ccc; padding: 5px;"> Appears  </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows 7 </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> Fixed </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows 10 </td></tr> </table></p>
+<p><table class="wikitable">
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> Appears  </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows 7 </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> Fixed </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows 10 </td></tr> </table></p>
 <h2><a name="Sample_project"></a>Sample project<a href="#Sample_project" class="section_anchor"></a></h2>
 <p><a href="http://conemu-maximus5.googlecode.com/svn/files/BugReports/" rel="nofollow">http://conemu-maximus5.googlecode.com/svn/files/BugReports/</a> </p>
 <h2><a name="Workaround"></a>Workaround<a href="#Workaround" class="section_anchor"></a></h2>
@@ -16,7 +18,9 @@ layout: docs_ru
 <p><br> </p>
 <h1><a name="Console_screen_buffer_corrupts_from_other_console_application"></a>Console screen buffer corrupts from other console application<a href="#Console_screen_buffer_corrupts_from_other_console_application" class="section_anchor"></a></h1>
 <p><a href="http://social.msdn.microsoft.com/Forums/en-US/ec363615-397c-42a8-84d2-38a70e4f8ae2" rel="nofollow">http://social.msdn.microsoft.com/Forums/en-US/ec363615-397c-42a8-84d2-38a70e4f8ae2</a> </p>
-<p><table class="wikitable"><tr><td style="border: 1px solid #ccc; padding: 5px;"> Appears </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows 7 </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> Fixed </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows 8 </td></tr> </table></p>
+<p><table class="wikitable">
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> Appears </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows 7 </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> Fixed </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows 8 </td></tr> </table></p>
 <h2><a name="Related_issues"></a>Related issues<a href="#Related_issues" class="section_anchor"></a></h2>
 <p><a title="ConEmu.Maximus5.090725.7z - неработает Telnet.exe" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=65">&nbsp;Issue 65&nbsp;</a>, <a title="ConEmu 20091001 32-битные консольные приложения" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=107">&nbsp;Issue 107&nbsp;</a>, <a title="Tunnelier stermc.exe hangs under Win7" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=529">&nbsp;Issue 529&nbsp;</a>, <a title="ConEmuPack.120806.7z заработал текстовый редактор Aurora из под Far30b2785.x86.20120808.7z…" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=669">&nbsp;Issue 669&nbsp;</a>, <a title="incompatible with VBinDiff..." class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=910">&nbsp;Issue 910&nbsp;</a>, <a title="telnet command mode not visible" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1023">&nbsp;Issue 1023&nbsp;</a>, <a title="Cannot use telnet" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=1081">&nbsp;Issue 1081&nbsp;</a> </p>
 <h2><a name="Workaround"></a>Workaround<a href="#Workaround" class="section_anchor"></a></h2>
@@ -24,7 +28,9 @@ layout: docs_ru
 <p><br> </p>
 <h1><a name="chcp_hung"></a>chcp hung<a href="#chcp_hung" class="section_anchor"></a></h1>
 <p>Console code page change (<tt>chcp.com</tt>, <tt>SetConsoleCP</tt>, <tt>SetConsoleOutputCP</tt>) hungs. </p>
-<p><table class="wikitable"><tr><td style="border: 1px solid #ccc; padding: 5px;"> Appears </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows XP </td></tr> <tr><td style="border: 1px solid #ccc; padding: 5px;"> Fixed </td><td style="border: 1px solid #ccc; padding: 5px;"> ? </td></tr> </table></p>
+<p><table class="wikitable">
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> Appears </td><td style="border: 1px solid #ccc; padding: 5px;"> Windows XP </td></tr>
+<tr><td style="border: 1px solid #ccc; padding: 5px;"> Fixed </td><td style="border: 1px solid #ccc; padding: 5px;"> ? </td></tr> </table></p>
 <h2><a name="Related_issues"></a>Related issues<a href="#Related_issues" class="section_anchor"></a></h2>
 <p><a title="2009.7.21 зависание при выполненинии chcp 1251 на win2003" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=60">&nbsp;Issue 60&nbsp;</a>, <a title="Зависание при запуске chcp.com" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=226">&nbsp;Issue 226&nbsp;</a>, <a title="При установке conemu не работают некоторые программы (не связанные с FAR'ом)…" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=298">&nbsp;Issue 298&nbsp;</a>, <a title="ConEmu 110926 - chcp всё ещё даёт о себе знать" class=closed_ref href="http://code.google.com/p/conemu-maximus5/issues/detail?id=437">&nbsp;Issue 437&nbsp;</a> </p>
 <h2><a name="Workaround"></a>Workaround<a href="#Workaround" class="section_anchor"></a></h2>
